Added toggle caption and styled li items

--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -19,6 +19,8 @@
             <li>My Second Thing to do</li>
         </ul>
     </form>
+    <small>Left click to toggle completed. <br> Right click to 
+    complete to do. </small>
     <script src="script.js"></script>
 </body>
 </html>
