--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -19,6 +19,6 @@
     </form>
     <small>Left click to toggle completed. <br> Right click to 
     complete to do. </small>
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
