Fixed up some styling issues

--- a/toDoList/index.html
+++ b/toDoList/index.html
@@ -17,8 +17,8 @@
         <ul class="todos" id="todos">
         </ul>
     </form>
-    <small>Left click to toggle completed. <br> Right click to 
-    complete to do. </small>
+    <small>Left click to cross off items as completed. <br> 
+        Right click to remove item from the list. </small>
     <script src="app.js"></script>
 </body>
 </html>
