--- a/insectCatchGame/index.html
+++ b/insectCatchGame/index.html
@@ -61,6 +61,6 @@
                 You are playing an impossible game!</h5>
             </div>
 
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
