Styled choose insect buttons

--- a/insectCatchGame/index.html
+++ b/insectCatchGame/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <div class="screen">
-    <h1>Catch The Insect</h1>
+    <h1 class= "headline">Catch The Insect</h1>
     <button class="btn" id="start-btn">Play Game 
     </button>
     </div>
 
     <div class="screen">
-        <h1>What is your favorite insect?</h1>
+        <h1 class= "headline">What is your favorite insect?</h1>
         <ul class="insects-list">
             <li>
                 <button class="choose-insect-btn">
