--- a/insectCatchGame/index.html
+++ b/insectCatchGame/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="screen">
-        <h1>Catch The Insect</h1>
+        <h1><i class="fas fa-bug" id=insect_icon></i>
+            Catch The Insect
+            <i class="fas fa-bug" id=insect_icon></i></h1>
         <button class="btn" id="start-btn">Play Game</button>
       </div>
   
