--- a/3DBackgroundSquares/index.html
+++ b/3DBackgroundSquares/index.html
@@ -3,15 +3,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>3D Background Squares</title>
     <link rel="shortcut icon" type="image/jpg" href="Favicon_Image_Location"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
-    <script src="script.js"></script>
+    <h1>Background Squares</h1>
+    <div class="squaresContainer">
+        
+    </div>
+    <script src="app.js"></script>
 </body>
 </html>
