Finished html project layout

--- a/3DBackgroundSquares/index.html
+++ b/3DBackgroundSquares/index.html
@@ -9,9 +9,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Background Squares</h1>
-    <div class="squaresContainer">
-        
+    <button id="btn" class="magic">
+        Magic
+    </button>
+    <div id="boxes" class="boxes">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
     </div>
     <script src="app.js"></script>
 </body>
