Added state specific styling to button

--- a/3DBackgroundSquares/index.html
+++ b/3DBackgroundSquares/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <button id="btn" class="magic">
-        Magic
+        Magic <i class="fas fa-magic"></i>
     </button>
     <div id="boxes" class="boxes">
         <div class="box"></div>
