--- a/3DBackgroundSquares/index.html
+++ b/3DBackgroundSquares/index.html
@@ -12,7 +12,7 @@
     <button id="btn" class="magic">
         Magic <i class="fas fa-magic"></i>
     </button>
-    <div id="boxes" class="boxes">
+    <div id="boxes" class="boxes big">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
